# talaos-inventory

./: .gitignore  .travis.yml  README  README.md  README.txt  composer.json  config.py  db_create.py  glpi  requirements.txt  run.py  setup.cfg  test  tox.ini  uwsgi.ini  wsgi_apache.py
app/: __init__.py  config.php  config.py  dbmodels.php  glpi.py  glpi2.py  main.php  seed.php
app/bootstrap/: app.php  database.php  paths.php  statsd.php
app/database/: __init__.py  glpi_asset_disk.py  glpi_asset_type.py  glpi_computer.py  glpi_operatingsystem.py  install.php
app/dbmodels/: Asset.php  AssetDisk.php  AssetDisplay.php  AssetPower.php  AssetPrinter.php  AssetVirtualMachine.php  Blacklist.php  Budget.php  Cartridge.php  CartridgeCompatibility.php  CartridgeItem.php  CartridgeItemType.php  CompatiblePrinterModel.php  Consumable.php  ConsumableItem.php  Contract.php  ContractType.php  DeviceCase.php  DeviceCaseItem.php  DeviceCaseType.php  DeviceControl.php  DeviceControlItem.php  DeviceDrive.php  DeviceDriveItem.php  DeviceGraphicCard.php  DeviceGraphicCardItem.php  DeviceHardDrive.php  DeviceHardDriveItem.php  DeviceMemory.php  DeviceMemoryItem.php  DeviceMemoryType.php  DeviceMotherBoard.php  DeviceMotherBoardItem.php  DevicePci.php  (+140 more)
config/: .gitignore  database.cfg.php.sample  statsd.cfg.php.sample
docs/: settings.ini
frontend/: .htaccess  app.js  index.html  style.css
fusionglpi/: __init__.py  app.py  commands.py  glpi.py  log.py  main.py  utils.py
public/: index.php
talaos_inventory/: app.py  main.py  search.py
tools/: bench.sh  delete.sh  get_all.sh  get_id1.sh  gnuplottemplate  post.sh
(+250 files in other folders)
