[metadata]
name = fusionglpi
author = FusionGLPI Team
author-email = <to be discussed>
summary = Yet another asset inventory manager
description-file = README.md
license = <to be discussed>
classifier =
    Programming Language :: Python :: 3 :: Only
    Development Status :: 1 - Planning
    Environment :: Web Environment
    Environment :: Console
    Framework :: Flask
    Intended Audience :: System Administrators
    Topic :: System :: Systems Administration
keywords =
    inventory
    assets
    management

[files]
packages =
    fusionglpi
[entry_points]
console_scripts =
    fusionglpi = fusionglpi.commands:main
